VideoQA Project Page 2

--- a/dialogsummary-videoqa.html
+++ b/dialogsummary-videoqa.html
@@ -131,8 +131,7 @@
                                     <pre style="border: #c7c7c7;border-style: solid;padding: 10px;white-space: pre-wrap">
 @inproceedings{engin2021hidden,
     title={On the hidden treasure of dialog in video question answering},
-    author={Engin, Deniz and Schnitzler, Fran{\c{c}}ois and Duong, Ngoc QK and Avrithis,
-    Yannis},
+    author={Engin, Deniz and Schnitzler, Fran{\c{c}}ois and Duong, Ngoc QK and Avrithis, Yannis},
     journal={ICCV},
     year={2021}
 }
