--- a/index.html
+++ b/index.html
@@ -168,14 +168,23 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
+                     <li>October 2021 - I will present <a href="https://arxiv.org/abs/2103.14517">Video
+                         QA</a> paper at <a href="https://sites.google.com/view/iccv21clvl/"> ICCV21 Workshop on Closing the Loop Between Vision and Language.</a>
+                        </li>
+
+                        <li>September 2021 - I participated in <a href="https://ellisds.eu/">ELLIS 2021.</a>
+                        </li>
+                        <li>August 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">Video
+                            QA</a> code released.
+                        </li>
                         <li>July 2021 - Paper on <a href="https://engindeniz.github.io/dialogsummary-videoqa">Video
-                            Question Answering</a> accepted at ICCV 2021.
+                            QA</a> accepted at ICCV 2021.
                         </li>
                         <li>July 2021 - I participated in <a href="https://project.inria.fr/paiss/paiss-2021/">PAISS
                             2021</a>.
                         </li>
                         <li>March 2021 - Preprint released at arXiv: <a href="https://arxiv.org/abs/2103.14517">Video
-                            Question Answering</a>.
+                            QA</a>.
                         </li>
                         <li>September 2020 - Starting my PhD at INRIA and InterDigital.</li>
                         <li>April 2020 - Paper on <a
