--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
                             href="https://www.inria.fr/fr/centre-inria-rennes-bretagne-atlantique">INRIA Rennes</a> and
                         <a href="https://www.interdigital.com/">InterDigital</a> working with <a
                                 href="https://avrithis.net/">Yannis Avrithis</a>,
-                        <a href="https://www.interdigital.com/talent/?id=88">Ngoc Q. K. Duong</a>, <a
-                                href="https://sites.google.com/site/francoisschnitzler/">François Schnitzler</a>, and <a
+                        <a href="https://sites.google.com/site/francoisschnitzler/">François Schnitzler</a>, and <a
                                 href="http://people.rennes.inria.fr/Teddy.Furon/website/Welcome.html">Teddy Furon</a>.
                         I have received my BS and MS degrees from Electronics Engineering at Istanbul Technical
                         University. My research is focused on semantic multimodal question answering in videos.</p>
@@ -168,8 +167,9 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
-                     <li>October 2021 - I will present <a href="https://arxiv.org/abs/2103.14517">Video
-                         QA</a> paper at <a href="https://sites.google.com/view/iccv21clvl/"> ICCV21 Workshop on Closing the Loop Between Vision and Language.</a>
+                        <li>October 2021 - I presented <a href="https://arxiv.org/abs/2103.14517">Video
+                            QA</a> paper at <a href="https://sites.google.com/view/iccv21clvl/"> ICCV21 Workshop on
+                            Closing the Loop Between Vision and Language.</a>
                         </li>
 
                         <li>September 2021 - I participated in <a href="https://ellisds.eu/">ELLIS 2021.</a>
@@ -230,7 +230,7 @@
                             <em>ICCV, 2021</em><br/>
                             <a href="https://engindeniz.github.io/dialogsummary-videoqa">project page</a> |
                             <a href="https://arxiv.org/abs/2103.14517">arXiv</a> |
-                            <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">code</a> |  <a
+                            <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">code</a> | <a
                                 class="abstract">abstract</a>
                         </div>
                     </div>
