--- a/index.html
+++ b/index.html
@@ -144,8 +144,7 @@
                                 href="https://avrithis.net/">Yannis Avrithis</a>,
                         <a href="https://sites.google.com/site/francoisschnitzler/">François Schnitzler</a>, and <a
                                 href="http://people.rennes.inria.fr/Teddy.Furon/website/Welcome.html">Teddy Furon</a>.
-                        I have received my BS and MS degrees from Electronics Engineering at Istanbul Technical
-                        University. My research is focused on semantic multimodal question answering in videos.</p>
+                        I have received my BS and MS degrees from Electronics Engineering at <a href="https://www.itu.edu.tr/ ">Istanbul Technical University.</a> My research is focused on multi-modal video understanding, specifically video question answering.</p>
 
                     <hr class="post-list__divider">
                 </li>
@@ -167,27 +166,33 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
-                        <li>October 2021 - I presented <a href="https://arxiv.org/abs/2103.14517">Video
+                     <li>Jul. 2022 - I will participate in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022.</a>
+                        </li>
+                    <li>May 2022 - Serving as a reviewer for <a href="https://eccv2022.ecva.net/">ECCV 2022.</a>
+                        </li>
+                        <li>Oct. 2021 - I presented <a href="https://arxiv.org/abs/2103.14517">Video
                             QA</a> paper at <a href="https://sites.google.com/view/iccv21clvl/"> ICCV21 Workshop on
                             Closing the Loop Between Vision and Language.</a>
                         </li>
 
-                        <li>September 2021 - I participated in <a href="https://ellisds.eu/">ELLIS 2021.</a>
+                        <li>Sep. 2021 - I participated in <a href="https://ellisds.eu/">ELLIS 2021.</a>
                         </li>
-                        <li>August 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">Video
+                        <li>Aug. 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">Video
                             QA</a> code released.
                         </li>
-                        <li>July 2021 - Paper on <a href="https://engindeniz.github.io/dialogsummary-videoqa">Video
-                            QA</a> accepted at ICCV 2021.
+                        <li>Jul. 2021 - Paper on <a href="https://engindeniz.github.io/dialogsummary-videoqa">Video
+                            QA</a> accepted at <a href="https://iccv2021.thecvf.com/">ICCV 2021
+                            </a>.
+
                         </li>
-                        <li>July 2021 - I participated in <a href="https://project.inria.fr/paiss/paiss-2021/">PAISS
+                        <li>Jul. 2021 - I participated in <a href="https://project.inria.fr/paiss/paiss-2021/">PAISS
                             2021</a>.
                         </li>
-                        <li>March 2021 - Preprint released at arXiv: <a href="https://arxiv.org/abs/2103.14517">Video
+                        <li>Mar. 2021 - Preprint released at arXiv: <a href="https://arxiv.org/abs/2103.14517">Video
                             QA</a>.
                         </li>
-                        <li>September 2020 - Starting my PhD at INRIA and InterDigital.</li>
-                        <li>April 2020 - Paper on <a
+                        <li>Sep. 2020 - Starting my PhD at INRIA and InterDigital.</li>
+                        <li>Apr. 2020 - Paper on <a
                                 href="https://openaccess.thecvf.com/content_CVPRW_2020/papers/w48/Engin_Offline_Signature_Verification_on_Real-World_Documents_CVPRW_2020_paper.pdf">Signature
                             Verification</a> accepted at <a href="https://vislab.ucr.edu/Biometrics2020/index.php">CVPR
                             2020 Biometrics Workshop</a>.
@@ -270,7 +275,7 @@
                         <div class="right-col">
                             <a href="https://arxiv.org/abs/2004.12104">Offline Signature Verification on Real-World
                                 Documents</a>
-                            <br/><strong>Deniz Engin</strong>, Alperen Kantarcı, Seçil Arslan, <a
+                            <br/><strong>Deniz Engin*</strong>, Alperen Kantarcı*, Seçil Arslan, <a
                                 href="https://web.itu.edu.tr/ekenel/">Hazım Kemal Ekenel</a><br/>
                             <em>CVPR Biometrics Workshop, </em>2020<br/>
                             <a href="https://arxiv.org/abs/2004.12104">arXiv</a> | <a class="abstract">abstract</a>
@@ -315,7 +320,7 @@
                             <a href="http://openaccess.thecvf.com/content_cvpr_2018_workshops/papers/w13/Engin_Cycle-Dehaze_Enhanced_CycleGAN_CVPR_2018_paper.pdf">Cycle-Dehaze:
                                 Enhanced CycleGAN for Single Image Dehazing</a>
                             <br/>
-                            <strong>Deniz Engin</strong>, Anıl Genç, <a href="https://web.itu.edu.tr/ekenel/">Hazım
+                            <strong>Deniz Engin*</strong>, Anıl Genç*, <a href="https://web.itu.edu.tr/ekenel/">Hazım
                             Kemal Ekenel</a>
                             <br/>
                             <em>CVPR NTIRE Workshop, </em>2018<br/>
