--- a/index.html
+++ b/index.html
@@ -139,13 +139,10 @@
                     </h2>
                     <p class="excerpt">
                     <p>I am a PhD student at <a href="https://www-linkmedia.irisa.fr/">LinkMedia</a> team in <a
-                            href="https://www.inria.fr/fr/centre-inria-rennes-bretagne-atlantique">INRIA Rennes</a> and
-                        <a href="https://www.interdigital.com/">InterDigital</a> working with <a
-                                href="https://avrithis.net/">Yannis Avrithis</a>,
-                        <a href="https://sites.google.com/site/francoisschnitzler/">François Schnitzler</a>, and <a
-                                href="http://people.rennes.inria.fr/Teddy.Furon/website/Welcome.html">Teddy Furon</a>.
+                            href="https://www.inria.fr/fr/centre-inria-rennes-bretagne-atlantique">INRIA Rennes</a> working with <a
+                                href="https://avrithis.net/">Yannis Avrithis</a> and <a
+                                href="http://people.rennes.inria.fr/Teddy.Furon">Teddy Furon</a>.
                         I have received my BS and MS degrees from Electronics Engineering at <a href="https://www.itu.edu.tr/ ">Istanbul Technical University.</a> My research is focused on multi-modal video understanding, specifically video question answering.</p>
-
                     <hr class="post-list__divider">
                 </li>
 
@@ -166,24 +163,25 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
-                     <li>Jul. 2022 - I will participate in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022.</a>
+                     <li>Jul. 2022 - I will participate in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022</a>.
                         </li>
-                    <li>May 2022 - Serving as a reviewer for <a href="https://eccv2022.ecva.net/">ECCV 2022.</a>
+                    <li>Jul. 2022 - I will present <a href="https://arxiv.org/abs/2103.14517">Video
+                            QA</a> paper at <a href="https://caprfiap2022.sciencesconf.org/">CAp 2022</a>.
+                        </li>
+                    <li>May 2022 - Serving as a reviewer for <a href="https://eccv2022.ecva.net/">ECCV 2022</a>.
                         </li>
                         <li>Oct. 2021 - I presented <a href="https://arxiv.org/abs/2103.14517">Video
                             QA</a> paper at <a href="https://sites.google.com/view/iccv21clvl/"> ICCV21 Workshop on
-                            Closing the Loop Between Vision and Language.</a>
+                            Closing the Loop Between Vision and Language</a>.
                         </li>
 
-                        <li>Sep. 2021 - I participated in <a href="https://ellisds.eu/">ELLIS 2021.</a>
+                        <li>Sep. 2021 - I participated in <a href="https://ellisds.eu/">ELLIS 2021</a>.
                         </li>
                         <li>Aug. 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">Video
                             QA</a> code released.
                         </li>
                         <li>Jul. 2021 - Paper on <a href="https://engindeniz.github.io/dialogsummary-videoqa">Video
-                            QA</a> accepted at <a href="https://iccv2021.thecvf.com/">ICCV 2021
-                            </a>.
-
+                            QA</a> accepted at <a href="https://iccv2021.thecvf.com/">ICCV 2021</a>.
                         </li>
                         <li>Jul. 2021 - I participated in <a href="https://project.inria.fr/paiss/paiss-2021/">PAISS
                             2021</a>.
