--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
-                     <li>Jul. 2022 - I will participate in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022</a>.
+                    <li>Jul. 2022 - I participated in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022</a>.
                         </li>
-                    <li>Jul. 2022 - I will present <a href="https://arxiv.org/abs/2103.14517">Video
-                            QA</a> paper at <a href="https://caprfiap2022.sciencesconf.org/">CAp 2022</a>.
+                    <li>Jul. 2022 - I presented <a href="https://arxiv.org/abs/2103.14517">Video
+                            QA</a> paper at <a href="https://caprfiap2022.sciencesconf.org/">CAp & RFIAP 2022</a>.
                         </li>
                     <li>May 2022 - Serving as a reviewer for <a href="https://eccv2022.ecva.net/">ECCV 2022</a>.
                         </li>
