--- a/index.html
+++ b/index.html
@@ -163,6 +163,10 @@
                     </h2>
                     <p class="excerpt">
                     <ul>
+                    <li>Dec. 2022 - Serving as a reviewer for <a href="https://cvpr2023.thecvf.com/">CVPR 2023</a>.
+                        </li>
+                    <li>Nov. 2022 - I visited <a href="https://www.iarai.ac.at/">IARAI</a> for two weeks.
+                        </li>
                     <li>Jul. 2022 - I participated in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022</a>.
                         </li>
                     <li>Jul. 2022 - I presented <a href="https://arxiv.org/abs/2103.14517">Video
@@ -175,7 +179,7 @@
                             Closing the Loop Between Vision and Language</a>.
                         </li>
 
-                        <li>Sep. 2021 - I participated in <a href="https://ellisds.eu/">ELLIS 2021</a>.
+                        <li>Sep. 2021 - I participated in <a href="https://ellis.eu/events/ellis-doctoral-symposium">ELLIS 2021</a>.
                         </li>
                         <li>Aug. 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">Video
                             QA</a> code released.
