--- a/index.html
+++ b/index.html
@@ -169,29 +169,24 @@
                         </li>
                     <li>Jul. 2022 - I participated in <a href="https://iplab.dmi.unict.it/icvss2022/">ICVSS 2022</a>.
                         </li>
-                    <li>Jul. 2022 - I presented <a href="https://arxiv.org/abs/2103.14517">Video
-                            QA</a> paper at <a href="https://caprfiap2022.sciencesconf.org/">CAp & RFIAP 2022</a>.
+                    <li>Jul. 2022 - I presented <a href="https://arxiv.org/abs/2103.14517">VideoQA</a> paper at <a href="https://caprfiap2022.sciencesconf.org/">CAp & RFIAP 2022</a>.
                         </li>
                     <li>May 2022 - Serving as a reviewer for <a href="https://eccv2022.ecva.net/">ECCV 2022</a>.
                         </li>
-                        <li>Oct. 2021 - I presented <a href="https://arxiv.org/abs/2103.14517">Video
-                            QA</a> paper at <a href="https://sites.google.com/view/iccv21clvl/"> ICCV21 Workshop on
+                        <li>Oct. 2021 - I presented <a href="https://arxiv.org/abs/2103.14517">VideoQA</a> paper at <a href="https://sites.google.com/view/iccv21clvl/"> ICCV21 Workshop on
                             Closing the Loop Between Vision and Language</a>.
                         </li>
 
                         <li>Sep. 2021 - I participated in <a href="https://ellis.eu/events/ellis-doctoral-symposium">ELLIS 2021</a>.
                         </li>
-                        <li>Aug. 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">Video
-                            QA</a> code released.
+                        <li>Aug. 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">VideoQA</a> code released.
                         </li>
-                        <li>Jul. 2021 - Paper on <a href="https://engindeniz.github.io/dialogsummary-videoqa">Video
-                            QA</a> accepted at <a href="https://iccv2021.thecvf.com/">ICCV 2021</a>.
+                        <li>Jul. 2021 - Paper on <a href="https://engindeniz.github.io/dialogsummary-videoqa">VideoQA</a> accepted at <a href="https://iccv2021.thecvf.com/">ICCV 2021</a>.
                         </li>
                         <li>Jul. 2021 - I participated in <a href="https://project.inria.fr/paiss/paiss-2021/">PAISS
                             2021</a>.
                         </li>
-                        <li>Mar. 2021 - Preprint released at arXiv: <a href="https://arxiv.org/abs/2103.14517">Video
-                            QA</a>.
+                        <li>Mar. 2021 - Preprint released at arXiv: <a href="https://arxiv.org/abs/2103.14517">VideoQA</a>.
                         </li>
                         <li>Sep. 2020 - Starting my PhD at INRIA and InterDigital.</li>
                         <li>Apr. 2020 - Paper on <a
