--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             Closing the Loop Between Vision and Language</a>.
                         </li>
 
-                        <li>Sep. 2021 - I participated in <a href="https://ellis.eu/events/ellis-doctoral-symposium">ELLIS 2021</a>.
+                        <li>Sep. 2021 - I participated in <a href="https://ellis.eu/events/ellis-doctoral-symposium">ELLIS Doctoral Symposium 2021</a>.
                         </li>
                         <li>Aug. 2021 - <a href="https://github.com/InterDigitalInc/DialogSummary-VideoQA">VideoQA</a> code released.
                         </li>
