--- a/vitis.html
+++ b/vitis.html
@@ -124,7 +124,7 @@
 @inproceedings{engin2023zero,
     title={Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts},
     author={Engin, Deniz and Avrithis, Yannis},
-    journal={ICCVW},
+    booktitle={ICCVW},
     year={2023}
 }
                                     </pre>
