project pages update

--- a/vitis.html
+++ b/vitis.html
@@ -96,7 +96,7 @@
                 <img src="images/vitis_method.png" style="padding-bottom: 20px"/>
             </div>
 
-            <p style="text-align: justify">(a) Our model consists of a frozen video encoder, a visual mapping
+            <p style="text-align: justify">(a) ViTiS consists of a frozen video encoder, a visual mapping
                 network, a frozen text embedding layer, a frozen language model and a frozen classifier
                 head. Given input video frames and text, video encoder extracts frame features and the visual mapping network maps
                 them to the same space as the text embeddings obtained by text embedding layer. Then, the language model takes the video and text
