paper link update

--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
                             <strong>Deniz Engin</strong>,
                             <a href="https://avrithis.net/">Yannis Avrithis</a>
                             <br/>
-                            ICCVW 2023<br/>
+                            ICCV Workshops 2023<br/>
                             <a href="https://engindeniz.github.io/vitis">project page</a> |
-                            <a href="https://engindeniz.github.io/vitis">arXiv</a> |
+                            <a href="https://arxiv.org/abs/2309.15915">arXiv</a> |
                             <a href="https://github.com/engindeniz/vitis">code</a> | <a
                                 class="abstract">abstract</a>
                         </div>
@@ -315,7 +315,7 @@
                                 Documents</a>
                             <br/><strong>Deniz Engin*</strong>, Alperen Kantarcı*, Seçil Arslan, <a
                                 href="https://web.itu.edu.tr/ekenel/">Hazım Kemal Ekenel</a><br/>
-                            CVPRW 2020<br/>
+                            CVPR Workshops 2020<br/>
                             <a href="https://arxiv.org/abs/2004.12104">arXiv</a> | <a class="abstract">abstract</a>
                         </div>
                     </div>
@@ -361,7 +361,7 @@
                             <strong>Deniz Engin*</strong>, Anıl Genç*, <a href="https://web.itu.edu.tr/ekenel/">Hazım
                             Kemal Ekenel</a>
                             <br/>
-                            CVPRW 2018<br/>
+                            CVPR Workshops 2018<br/>
                             <a href="https://arxiv.org/abs/1805.05308">arXiv</a> |
                             <a href="https://github.com/Deniz.Enginniz/Cycle-Dehaze">code</a> | <a class="abstract">abstract</a>
                         </div>
