--- a/vitis.html
+++ b/vitis.html
@@ -53,8 +53,8 @@
                 <!--                <ol>-->
                 <li>
                     <div class="two-col-row top-authors">
-                        <div style="margin: auto"><a href="https://engindeniz.github.io/vitis">Paper - Coming Soon</a></div>
-                        <div style="margin: auto"><a href="https://github.com/engindeniz/vitis">Code - Coming Soon</a>
+                        <div style="margin: auto"><a href="https://arxiv.org/abs/2309.15915">Paper</a></div>
+                        <div style="margin: auto"><a href="https://github.com/engindeniz/vitis">Code</a>
                         </div>
                     </div>
                 </li>
@@ -121,10 +121,10 @@
                         <code style="border: black;background: none;padding: 0">
 
                                     <pre style="border: #c7c7c7;border-style: solid;padding: 10px;white-space: pre-wrap">
-@inproceedings{engin2023zero,
+@inproceedings{engin_2023_ICCV,
     title={Zero-Shot and Few-Shot Video Question Answering with Multi-Modal Prompts},
     author={Engin, Deniz and Avrithis, Yannis},
-    booktitle={ICCVW},
+    booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV) Workshops},
     year={2023}
 }
                                     </pre>
